[gd_scene load_steps=8 format=2]

[ext_resource path="res://cities/GrowBlockCityAlt.tscn" type="PackedScene" id=1]
[ext_resource path="res://cities/GrowCityTest.gd" type="Script" id=2]
[ext_resource path="res://grow_points/BuildingSizeCurve.tres" type="Curve" id=3]
[ext_resource path="res://effects/Moon.tscn" type="PackedScene" id=4]
[ext_resource path="res://effects/Starfield.tscn" type="PackedScene" id=5]
[ext_resource path="res://grow_points/BuildingMinHeightCurve.tres" type="Curve" id=6]
[ext_resource path="res://grow_points/BuildingMaxHeightCurve.tres" type="Curve" id=7]

[node name="GrowCityTest" type="Spatial"]
script = ExtResource( 2 )

[node name="OrthoDownCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20, 8, -40 )
projection = 1
current = true
size = 90.0

[node name="FOV30Camera" type="Camera" parent="."]
transform = Transform( 0.939693, 0.0740267, 0.333913, 0, 0.976296, -0.21644, -0.34202, 0.203387, 0.917418, 13, 2, 12 )
cull_mask = 3
fov = 30.0
size = 3.0

[node name="FOV15Camera" type="Camera" parent="."]
transform = Transform( 0.939693, 0.029809, 0.340718, 0, 0.996195, -0.0871557, -0.34202, 0.0818996, 0.936117, 13, 2, 12 )
cull_mask = 3
fov = 15.0
size = 3.0

[node name="CameraAlignedEffects" type="Spatial" parent="FOV15Camera"]
transform = Transform( 1, 0, 0, 0, 1, -7.45058e-09, 0, 0, 1, 0, 0, -55 )

[node name="Starfield" parent="FOV15Camera/CameraAlignedEffects" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, -1.86265e-09, 1, -7.45058e-09, 0, 0, 1, -1.90735e-06, 8, -3.8147e-06 )
width = 22.0
height = 10.0

[node name="Moon" parent="FOV15Camera/CameraAlignedEffects" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, -1.86265e-09, 1, -7.45058e-09, 0, 0, 1, 0, 0, 0 )

[node name="GUI" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0

[node name="CameraBox" type="HBoxContainer" parent="GUI"]
margin_right = 203.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="GUI/CameraBox"]
margin_top = 3.0
margin_right = 56.0
margin_bottom = 17.0
text = "Camera: "

[node name="CameraOptions" type="OptionButton" parent="GUI/CameraBox"]
margin_left = 60.0
margin_right = 172.0
margin_bottom = 20.0
text = "Orthographic"
items = [ "Orthographic", null, false, 0, null, "FOV 30", null, false, 1, null, "FOV 15", null, false, 2, null ]
selected = 0

[node name="HSeparator" type="HSeparator" parent="GUI"]
margin_top = 24.0
margin_right = 203.0
margin_bottom = 28.0

[node name="OptionsBox" type="GridContainer" parent="GUI"]
margin_top = 32.0
margin_right = 203.0
margin_bottom = 112.0
columns = 2

[node name="XLabel" type="Label" parent="GUI/OptionsBox"]
margin_top = 5.0
margin_right = 125.0
margin_bottom = 19.0
text = "X Width"
align = 1

[node name="XBox" type="SpinBox" parent="GUI/OptionsBox"]
margin_left = 129.0
margin_right = 203.0
margin_bottom = 24.0
min_value = 10.0
max_value = 500.0
value = 10.0

[node name="ZLabel" type="Label" parent="GUI/OptionsBox"]
margin_top = 33.0
margin_right = 125.0
margin_bottom = 47.0
text = "Z Length"
align = 1

[node name="ZBox" type="SpinBox" parent="GUI/OptionsBox"]
margin_left = 129.0
margin_top = 28.0
margin_right = 203.0
margin_bottom = 52.0
min_value = 10.0
max_value = 500.0
value = 10.0

[node name="BuildingLabel" type="Label" parent="GUI/OptionsBox"]
margin_top = 61.0
margin_right = 125.0
margin_bottom = 75.0
text = "Buildings-per-Block"
align = 1

[node name="BuildingBox" type="SpinBox" parent="GUI/OptionsBox"]
margin_left = 129.0
margin_top = 56.0
margin_right = 203.0
margin_bottom = 80.0
min_value = 1.0
max_value = 60.0
value = 1.0

[node name="HSeparator2" type="HSeparator" parent="GUI"]
margin_top = 116.0
margin_right = 203.0
margin_bottom = 120.0

[node name="CleanToggle" type="CheckButton" parent="GUI"]
unique_name_in_owner = true
margin_top = 124.0
margin_right = 203.0
margin_bottom = 164.0
pressed = true
text = "Clean Up Buildings"

[node name="RegenerateButton" type="Button" parent="GUI"]
unique_name_in_owner = true
margin_top = 168.0
margin_right = 203.0
margin_bottom = 188.0
text = "Regenerate"

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 12, 0, -12 )
light_color = Color( 0, 0, 0, 1 )
light_energy = 0.5
light_specular = 2.054

[node name="GrowBlockCityAlt" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, -1, -16, 0, 0 )
offscreen_processing = false
max_square_size = ExtResource( 3 )
min_height = ExtResource( 6 )
max_height = ExtResource( 7 )

[connection signal="item_selected" from="GUI/CameraBox/CameraOptions" to="." method="_on_CameraOptions_item_selected"]
[connection signal="pressed" from="GUI/RegenerateButton" to="." method="_on_RegenerateButton_pressed"]
[connection signal="city_complete" from="GrowBlockCityAlt" to="." method="_on_GrowBlockCityAlt_city_complete"]
